<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="event_name">Event name</string>
    <string name="event_location">Event location</string>
    <string name="event_date">Event date</string>
    <string name="event_type">Event type</string>
    <string name="event_description">Event description</string>
    <string name="fab_description">Create a new event</string>
    <string name="login_button">Login</string>
    <string name="guest_button">Guest</string>
    <!-- bottom nav -->
    <string name="timeline">Timeline</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="map">Maps</string>
    <string name="calender">Calender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondary_text">%s, %s</string>
    <!-- item row -->
    <string name="content_description_card">Card</string>
    <string name="edit_button">Edit</string>

    <!-- login activity -->
    <string name="email_login_button">Login with Email</string>
    <string name="google_login_button">Login with Google</string>

    <!-- bookmark fragment -->
    <string name="guest_login_message">You need to log in to access your bookmarks.</string>
</resources>