<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        style="?textAppearanceHeadlineSmall"
        android:id="@+id/text_view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Event name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/event_name"
        app:startIconDrawable="@drawable/outline_house_24"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_app_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Event location -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/event_location"
        app:startIconDrawable="@drawable/outline_add_location_alt_24"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_event_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Event date -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/outline_calendar_month_24"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_event_location"
        android:hint="@string/event_date">




            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_date_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"/>


    </com.google.android.material.textfield.TextInputLayout>

    <!-- Event type -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/event_type"
        app:startIconDrawable="@drawable/outline_celebration_24"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_event_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Event description -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/event_description"

        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_event_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_description"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:gravity="top|start"
            android:inputType="text" />

        <TextView
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_event_description" />

    </com.google.android.material.textfield.TextInputLayout>



    <!-- Add event -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_event"
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:clickable="true"
        app:srcCompat="@drawable/outline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" />



    <!-- Implement the other UI components here. -->

</androidx.constraintlayout.widget.ConstraintLayout>
