<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.view.AddEventFragment">

            <!-- Event Image -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/material_card_event_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/linear_layout_event">

                    <ImageView
                        android:id="@+id/eventImage"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/eventTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Click to change image"
                        android:textStyle="bold"
                        android:padding="8dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Event name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/event_name"
                app:startIconDrawable="@drawable/outline_house_24"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/material_card_event_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Event location -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/event_location"
                app:startIconDrawable="@drawable/outline_add_location_alt_24"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Event date -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_date"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:startIconDrawable="@drawable/outline_calendar_month_24"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_location"
                android:hint="@string/event_date">




                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_date_range"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!-- Event type -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/event_type"
                app:startIconDrawable="@drawable/outline_celebration_24"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Event description -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/event_description"

                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_event_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:gravity="top|start"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Add event -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/fab_description"
                app:srcCompat="@drawable/outline_add_24"

                android:layout_marginBottom="96dp"
                android:layout_marginEnd="16dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
